ingress/ingress-app1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-site
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - lab-gleydson.com
    secretName: tls-secret 
  rules:
  - host: lab-gleydson.com
    http:
      paths:
      - pathType: Prefix
        path: "/app1"
        backend:
          service:
            name: service-app1
            port: 
              number: 80
      - pathType: Prefix
        path: "/app2"
        backend:
          service:
            name: service-app2
            port: 
              number: 80
